# BintjeKit

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
common/: CMakeLists.txt
common/include/: spdlog_header.hpp
common/include/d2/: d2.hpp
common/include/fmt_sfml/: fmt_sfml.hpp
common/include/random/: random_engine.hpp
common/include/time/: time.hpp  time.inl
common/src/d2/: d2.cpp
common/src/random/: random_engine.cpp
common/src/time/: time.cpp
examples/: CMakeLists.txt
examples/billard/: CMakeLists.txt
examples/billard/src/: application.cpp  application.hpp  main.cpp  modules.hpp
examples/evobot/: .gitignore  CMakeLists.txt  main.cpp  module.hpp
examples/evobot/application/: application.cpp  application.hpp  defaults_options.cpp  defaults_options.hpp  event_manager.cpp  event_manager.hpp  window.cpp  window.hpp
examples/evobot/cmake/: CompilerOption.cmake  Configure.cmake  Dependencies.cmake  Options.cmake
examples/evobot/evobot_engine/: blob.cpp  blob.hpp  bot.cpp  bot.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_manager_builder.cpp  entity_manager_builder.hpp  evo_world.cpp  evo_world.hpp  evobot.cpp  evobot.hpp  evobot_engine.cpp  evobot_engine.hpp  evobot_types.hpp  glob.cpp  glob.hpp
examples/evobot/renderer/: arrow_render_system.cpp  arrow_render_system.hpp  circle_render_system.cpp  circle_render_system.hpp  evobot_renderer.cpp  evobot_renderer.hpp  imgui_renderer.cpp  imgui_renderer.hpp  renderer.cpp  renderer.hpp
examples/evobot/src/: application.cpp  application.hpp  common.cpp  common.hpp  initializer.cpp  initializer.hpp  main.cpp  modules.hpp
examples/example/: CMakeLists.txt
examples/example/src/: main.cpp
examples/gol/: CMakeLists.txt
examples/gol/include/: core_event_handler.hpp  game_of_life.hpp  game_of_life_renderer.hpp  renderer.hpp
examples/gol/src/: core_event_handler.cpp  default_json.inl  game_of_life.cpp  game_of_life_renderer.cpp  main.cpp  renderer.cpp
examples/life/: CMakeLists.txt
examples/life/src/: main.cpp
examples/minimal/: CMakeLists.txt
examples/minimal/src/: main.cpp
examples/minimal_example/: CMakeLists.txt
examples/minimal_example/src/: main.cpp
examples/toto/: .gitignore  CMakeLists.txt
examples/toto/cmake/: ConfigureCmake.cmake  Dependencies.cmake
examples/toto/src/: CMakeLists.txt  default_json.inl  main.cpp
examples/user_classes/: CMakeLists.txt
examples/user_classes/include/: engine.hpp  engine_renderer.hpp  event_manager.hpp  main_window.hpp  renderer.hpp
examples/user_classes/src/: engine.cpp  engine_renderer.cpp  event_manager.cpp  main.cpp  main_window.cpp  renderer.cpp
examples/user_types/: CMakeLists.txt
examples/user_types/src/: engine.cpp  engine.hpp  event_manager.cpp  event_manager.hpp  im_gui_renderer.cpp  im_gui_renderer.hpp  main.cpp  renderer.cpp  renderer.hpp  users_types.hpp  window.cpp  window.hpp
src/: CMakeLists.txt
src/cmake/: bintjeKitConfig.cmake.in  makelib.cmake
src/components/: CMakeLists.txt
src/components/common/: CMakeLists.txt  common.cppm  components.cppm  core_info_profider.cppm  core_info_provider.cppm
src/components/event/: CMakeLists.txt  common.cppm  iactionreceiver.cppm
src/components/imgui_wrapper/: CMakeLists.txt  imgui_wrapper.cppm  imgui_wrapper_impl.cppm  imgui_wrapper_interface.cppm
src/components/playground/: CMakeLists.txt  playground.cppm  playground_impl.cppm  playground_interface.cppm
src/components/renderer/: CMakeLists.txt  renderer.cppm  renderer_iml.cppm  renderer_impl.cppm  renderer_interface.cppm
src/components/simulation/: CMakeLists.txt  simulation.cppm  simulation_impl.cppm  simulation_interface.cppm
src/components/ui/: CMakeLists.txt  ui.cppm  ui_impl.cppm  ui_interface.cppm
src/components/window/: CMakeLists.txt  window.cppm  window_impl.cppm  window_interface.cppm
src/configuration/: CMakeLists.txt  configuration_manager.cpp  configuration_node.cpp  node.cpp  settings.cpp  sfml_json_adapter.cpp  utils.cpp
src/core/: CMakeLists.txt  core.cpp  core.cppm  core_builder.cpp  core_impl.cppm  core_interface.cppm  i_module.cpp  logger.cpp  logger.hpp  module_set.cpp
src/ecs/: CMakeLists.txt  entity_manager.cpp  i_system_manager.cpp
src/ecs/event/: event_manager.cpp
src/ecs/prefab/: prefab.cpp
src/ecs/system/: i_system.cpp
src/engine/: CMakeLists.txt  default_engine.cpp  entity_manager.cpp  gameplay_system_manager.cpp  i_engine.cpp  i_engine.hpp  i_playground.cpp  i_playground.hpp  i_world.cpp  physic_system_manager.cpp  play_ground.cpp  world.cpp
src/engine/event/: event_manager.cpp
src/engine/prefab/: prefab.cpp
src/engine/system/: i_system.cpp
src/entity/: CMakeLists.txt  component.cpp  component_register.cpp  entity_collection.cpp  entity_manager.cpp  ientity.cpp  typed_collection.cpp
src/entity/components/: component.cpp  component_register.cpp  component_view.cpp
src/entity_manager/: CMakeLists.txt  Collection.cpp  IEntity.cpp  collection.cpp  customgroup.cpp  entity.cpp  entitymanager.cpp  group.cpp  ientity.cpp
src/event/: CMakeLists.txt  default_event_manager.cpp  i_event_manager.cpp
src/event_manager/: CMakeLists.txt  action.cpp  default_core_event_handler.cpp  default_event_manager.cpp  event_helper.cpp  event_listener.cpp  event_manager.cpp  i_core_event_handler.cpp  i_event.cpp  i_event_listener.cpp  i_event_manager.cpp  input_binding_manager.cpp
src/factory/: CMakeLists.txt  factory.cppm  factory_impl.cppm  factory_interface.cppm
src/imgui/: CMakeLists.txt  i_imgui_renderer.cpp
src/logger/: CMakeLists.txt  logger.cpp
src/renderer/: CMakeLists.txt  default_renderer.cpp  i_bnjkit_imgui.cpp  i_engine_renderer.cpp  i_engine_renderer_old.cpp  i_imgui_renderer.cpp  i_render_system.cpp  i_renderer.cpp  render_system_manager.cpp
src/tools/: CMakeLists.txt
src/window/: CMakeLists.txt  default_main_window.cpp  i_main_window.cpp  main_window.cpp
tests/: CMakeLists.txt
tests/configuration/: CMakeLists.txt  configuration_test.cpp
tests/manual_tests/: CMakeLists.txt
tests/time/: CMakeLists.txt  time_test.cpp
(+241 files in other folders)
