cmake_minimum_required(VERSION 3.31)
message("Actual CMakeLists.txt: ${CMAKE_CURRENT_SOURCE_DIR}")
################################################################################
if (BINTJEKIT_BUILD_EXAMPLE_MINIMAL)
    add_subdirectory(minimal_example)
endif ()
if (BINTJEKIT_BUILD_EXAMPLE_USER)
    add_subdirectory(user_classes)
endif ()
if (BINTJEKIT_BUILD_EXAMPLE_GOL)
    add_subdirectory(gol)
endif ()
if (BINTJEKIT_BUILD_EXAMPLE_LIFE)
    add_subdirectory(life)
endif ()